start, add, check reducers / Playable

--- a/src/components/Card/Card.sass
+++ b/src/components/Card/Card.sass
@@ -36,9 +36,11 @@
   
 .opened
     transform: rotateY(180deg)
+    pointer-events: none
 
 .matched
     transform: rotateY(180deg)
+    pointer-events: none
     .front
         opacity: 0
     .back
